--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="container"> </div>
 
-<script src="ruffle/ruffle.js"></script>
+<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     <script>
         window.RufflePlayer = window.RufflePlayer || {};
         window.addEventListener("load", (event) => {
@@ -17,7 +17,7 @@
             const container = document.getElementById("container"); 
             container.appendChild(player);
             player.load({
-                url: "mig29.swf", 
+                url: "[S] PAG-90 combate.swf", 
                 backgroundColor: "#000", 
              });
             player.style.width = "450px"; 
