--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>hmstck</title>
 </head>
 <body>
-    <div id="container"> </div>
+    <P><h2>FLASH PAGINA 90</h2></P>
+   <p> <div id="container"> </div>
 
 <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     <script>
@@ -20,9 +21,9 @@
                 url: "[S] PAG-90 combate.swf", 
                 backgroundColor: "#000", 
              });
-            player.style.width = "450px"; 
+            player.style.width = "650px"; 
             player.style.height = "450px";
         });
-    </script>
+    </script></p>
 </body>
 </html>
