Update index.html pag 110

--- a/index.html
+++ b/index.html
@@ -25,5 +25,24 @@
             player.style.height = "450px";
         });
     </script></p>
+     <P><h2>FLASH PAGINA 110</h2></P>
+   <p> <div id="container"> </div>
+
+<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+    <script>
+        window.RufflePlayer = window.RufflePlayer || {};
+        window.addEventListener("load", (event) => {
+            const ruffle = window.RufflePlayer.newest();
+            const player = ruffle.createPlayer();
+            const container = document.getElementById("container"); 
+            container.appendChild(player);
+            player.load({
+                url: "[S] PAG-110 PESTERCHUM.swf", 
+                backgroundColor: "#000", 
+             });
+            player.style.width = "650px"; 
+            player.style.height = "450px";
+        });
+    </script></p>
 </body>
 </html>
