--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>hmstck</title>
 </head>
 <body>
-    <P><h2>FLASH PAGINA 90</h2></P>
-   <p> <div id="container"> </div>
-
+   
+    <div id="container"> </div>
+ <P><h2>FLASH PAGINA 90</h2></P>
 <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     <script>
         window.RufflePlayer = window.RufflePlayer || {};
@@ -24,10 +24,10 @@
             player.style.width = "650px"; 
             player.style.height = "450px";
         });
-    </script></p>
-     <P><h2>FLASH PAGINA 110</h2></P>
-   <p> <div id="container"> </div>
-
+    </script>
+    
+ <div id="container"> </div>
+ <P><h2>FLASH PAGINA 110</h2></P>
 <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     <script>
         window.RufflePlayer = window.RufflePlayer || {};
@@ -43,6 +43,6 @@
             player.style.width = "650px"; 
             player.style.height = "450px";
         });
-    </script></p>
+    </script>
 </body>
 </html>
