--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hmstck</title>
 </head>
+    
+ <style>   .container { border: 5px;
+}
+</style>
 <body>
    
     <div id="container"> </div>
@@ -25,7 +29,7 @@
             player.style.height = "450px";
         });
     </script>
-    
+    <div class="container"> <p> </p> </div>
  <div id="container"> </div>
  <P><h2>FLASH PAGINA 110</h2></P>
 <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
