--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hmstck</title>
 </head>
-    
- <style>   .container { border: 5px;
+<style>
+div { 
+  display: block;
 }
 </style>
 <body>
