--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hmstck</title>
 </head>
+    
 <style>
 div { 
   display: block;
@@ -13,7 +14,7 @@ div {
 <body>
    
     <div id="container"> </div>
- <P><h2>FLASH PAGINA 90</h2></P>
+ <div> <P><h2>FLASH PAGINA 90</h2></P>
 <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     <script>
         window.RufflePlayer = window.RufflePlayer || {};
@@ -29,7 +30,13 @@ div {
             player.style.width = "650px"; 
             player.style.height = "450px";
         });
-         window.RufflePlayer = window.RufflePlayer || {};
+    </script> </div>
+    
+ <div id="container"> </div>
+ <div> <P><h2>FLASH PAGINA 110</h2></P>
+<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+    <script>
+        window.RufflePlayer = window.RufflePlayer || {};
         window.addEventListener("load", (event) => {
             const ruffle = window.RufflePlayer.newest();
             const player = ruffle.createPlayer();
@@ -41,7 +48,7 @@ div {
              });
             player.style.width = "650px"; 
             player.style.height = "450px";
-    </script>
-
+        });
+    </script> </div>
 </body>
 </html>
