--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ div {
 <body>
    
     <div id="container"> </div>
- <div> <P><h2>FLASH PAGINA 90</h2></P>
+ <P><h2>FLASH PAGINA 90</h2></P>
 <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     <script>
         window.RufflePlayer = window.RufflePlayer || {};
@@ -30,10 +30,10 @@ div {
             player.style.width = "650px"; 
             player.style.height = "450px";
         });
-    </script> </div>
+    </script> 
     
  <div id="container"> </div>
- <div> <P><h2>FLASH PAGINA 110</h2></P>
+ <P><h2>FLASH PAGINA 110</h2></P>
 <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     <script>
         window.RufflePlayer = window.RufflePlayer || {};
@@ -49,6 +49,6 @@ div {
             player.style.width = "650px"; 
             player.style.height = "450px";
         });
-    </script> </div>
+    </script> 
 </body>
 </html>
