--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 </head>
     
 <style>
-div { 
-  display: block;
-}
+
+  .separado {
+    margin-bottom: 20px;
+  }
+
 </style>
 <body>
-   
+  <div class="separado">  
     <div id="container"> </div>
  <P><h2>FLASH PAGINA 90</h2></P>
 <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
@@ -30,8 +32,8 @@ div {
             player.style.width = "650px"; 
             player.style.height = "450px";
         });
-    </script> 
-    
+    </script> </div>
+ <div class="separado">      
  <div id="container"> </div>
  <P><h2>FLASH PAGINA 110</h2></P>
 <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
@@ -49,6 +51,6 @@ div {
             player.style.width = "650px"; 
             player.style.height = "450px";
         });
-    </script> 
+    </script> </div>
 </body>
 </html>
