--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
     
 <style>
 
-  .separado {
-    margin-bottom: 20px;
-  }
+.caja{
+  float: left;
+  width: calc(30% - 20px);
+  height: 150px;
+  background: black;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 20px;
+}
 
 </style>
 <body>
-  <div class="separado">  
-    <div id="container"> </div>
+  
+    <div class="caja" id="container"> </div>
  <P><h2>FLASH PAGINA 90</h2></P>
 <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     <script>
@@ -32,9 +38,9 @@
             player.style.width = "650px"; 
             player.style.height = "450px";
         });
-    </script> </div>
- <div class="separado">      
- <div id="container"> </div>
+    </script> 
+      
+ <div class="caja" id="container"> </div>
  <P><h2>FLASH PAGINA 110</h2></P>
 <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     <script>
@@ -51,6 +57,6 @@
             player.style.width = "650px"; 
             player.style.height = "450px";
         });
-    </script> </div>
+    </script> 
 </body>
 </html>
