--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             player.style.height = "450px";
         });
     </script> 
-
+<a href="pag-110.html" target="_blank" style="text-decoration: none;">
+    <button>Siguiente flash</button>
+</a>
 </body>
 </html>
