--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             player.style.height = "450px";
         });
     </script> 
-<a href="pag-110.html" target="_blank" style="text-decoration: none;">
+<a href="pag-110.html"  style="text-decoration: none;">
     <button>Siguiente flash</button>
 </a>
 </body>
