--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hmstck</title>
 </head>
-    
+    <Style> 
+        .bt2 {padding:6px;
+              border-radius:10px;
+             }
+    </Style>
+   
 
 <body>
   
@@ -27,8 +32,7 @@
             player.style.height = "450px";
         });
     </script> 
-<a href="pag-110.html"  style="text-decoration: none;">
-    <button>Siguiente flash</button>
+<button class="bt2" onclick="window.open('pag-110.html', '_blank')">Siguiente Flash</button>
 </a>
 </body>
 </html>
