--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             player.style.height = "450px";
         });
     </script> 
-<button class="bt2" onclick="window.open('pag-110.html', '_blank')">Siguiente Flash</button>
+<button class="bt2" onclick="window.location.href='pag-110.html';">Siguiente Flash</button>
 </a>
 </body>
 </html>
