--- a/pag-110.html
+++ b/pag-110.html
@@ -27,5 +27,7 @@
             player.style.height = "450px";
         });
     </script> 
+    <button class="bt2" onclick="window.location.href='index.html';">Anterior Flash</button>
+     <button class="bt2" onclick="window.location.href='index.html';">Siguiente Flash</button>
 </body>
 </html>
