--- a/EnConstruccion.html
+++ b/EnConstruccion.html
@@ -12,15 +12,15 @@
     
 
 <body>
-  <embed src="starwars.mid" hidden="true" autostart="true">
+  <embed src="rouxls-kaard-shop-hip-shop-extended.mp3" hidden="true" autostart="true">
   <p><h1>¡Eh espera!</h1></p>
       <P> <h3> Todavia no eh terminado de traducir el siguiente Flash interactivo!!</h3>
 </P>  
   <P> <h3> Tendras que detenerte un momento por aca</h3>
 </P>  
-  <img src="ruta-del-gif.gif" alt="Descripción del GIF" width="500">
+  <img src="John negando.gif" alt="John negando" width="500">
 
    <button class="bt2" onclick="window.location.href='index.html';">Ir Al Inicio</button>
-  <button class="bt2" onclick="window.location.href='index.html';">Ir Al Anterior Flash</button>
+  <button class="bt2" onclick="window.location.href='pag-110.html';">Ir Al Anterior Flash</button>
 </body>
 </html>
