--- a/pag-110.html
+++ b/pag-110.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hmstck</title>
 </head>
-    
-
+<style>.bt2{padding:6px;
+              border-radius:10px;
+             }
+  </style>
 <body>
          
  <div  id="container"> </div>
@@ -28,6 +30,6 @@
         });
     </script> 
     <button class="bt2" onclick="window.location.href='index.html';">Anterior Flash</button>
-     <button class="bt2" onclick="window.location.href='index.html';">Siguiente Flash</button>
+     <button class="bt2" onclick="window.location.href='EnConstruccion.html';">Siguiente Flash</button>
 </body>
 </html>
