--- a/EnConstruccion.html
+++ b/EnConstruccion.html
@@ -21,6 +21,6 @@
   <img src="John negando.gif" alt="John negando" width="500">
 
    <button class="bt2" onclick="window.location.href='index.html';">Ir Al Inicio</button>
-  <button class="bt2" onclick="window.location.href='pag-110.html';">Ir Al Anterior Flash</button>
+  <button class="bt2" onclick="window.location.href='[S]PAG-137 SBURB.html';">Ir Al Anterior Flash</button>
 </body>
 </html>
