--- a/pag-110.html
+++ b/pag-110.html
@@ -30,6 +30,6 @@
         });
     </script> 
     <button class="bt2" onclick="window.location.href='index.html';">Anterior Flash</button>
-     <button class="bt2" onclick="window.location.href='EnConstruccion.html';">Siguiente Flash</button>
+     <button class="bt2" onclick="window.location.href='[S]PAG-137 SBURB.html';">Siguiente Flash</button>
 </body>
 </html>
