--- a/[S]PAG-137 SBURB.html
+++ b/[S]PAG-137 SBURB.html
@@ -30,6 +30,6 @@
         });
     </script> 
     <button class="bt2" onclick="window.location.href='pag-110.html';">Anterior Flash</button>
-     <button class="bt2" onclick="window.location.href='EnConstruccion.html';">Siguiente Flash</button>
+     <button class="bt2" onclick="window.location.href='pag-138.html';">Siguiente Flash</button>
 </body>
 </html>
